src/test/ui/feature-gates/feature-gate-native_link_modifiers_bundle.rs
#[link(name = "foo", kind = "static", modifiers = "+bundle")]
//~^ ERROR: linking modifier `bundle` is unstable
extern "C" {}

fn main() {}
